Fixes json crash in mindmap view.

--- a/service/html/mindmap.html
+++ b/service/html/mindmap.html
@@ -6,7 +6,7 @@
                 <h4 class="modal-title"> Tests selected for {{ip}} </h4>
             </div>
             <div class="modal-body">
-		<mindmap tests="tests"></mindmap>
+    		  <mindmap testdata="tests"></mindmap>
             </div>
         </div>
     </div>
