--- a/service/html/configure.html
+++ b/service/html/configure.html
@@ -38,14 +38,16 @@
                         </div>
                         <div class="col-sm-9 col-md-6 col-lg-8">
                             <h4> Selected Tests 
-                				<small> {Click for overview} </small>
+                				<small> {Hover for overview} </small>
                 				<small class= "pull-right" ng-click="showMindmapPopup()" style="cursor: pointer">
                 					<span class="glyphicon glyphicon-eye-open"></span>
                 				</small>
             			    </h4>
                             <div class="list-group">
                                 <span type="button" class="list-group-item"
-                                    ng-repeat="t in selectedTests | filter: filterTests | orderBy:'rank'">{{t.name}}
+                                    ng-repeat="t in selectedTests | filter: filterTests | orderBy:'rank'"
+                                    data-toggle="tooltip" data-placement="top" title="{{t.commands}}">{{t.name}}
+
                                     <span class="label label-danger pull-right glyphicon glyphicon-minus"
                                         ng-click="removeTest(t)">
                                     </span>
