Adds cool visualization beta.

--- a/service/html/index.html
+++ b/service/html/index.html
@@ -15,10 +15,12 @@
 <script src="/js/libs/jquery.min.js"></script>
 <script src="/js/libs/ajaxmin.js"></script>
 <script src="/js/libs/ajaxmodal.js"></script>
-<script src="/js/libs/ajaxroutermin.js"></script>
 <script src="/js/libs/graph.min.js"></script>
+<script src="/js/libs/ajaxgraphmin.js"></script>
 <script src="/js/libs/bootstrap.min.js"></script>
+<script src="/js/libs/ajaxroutermin.js"></script>
 <script src="/js/libs/ajaxresourcemin.js"></script>
+<script src="/js/libs/angular-nvd3.js"></script>
 
 <script src="/js/controllers/app.controller.js"></script>
 <script src="/js/controllers/stats.controller.js"></script>
@@ -28,6 +30,7 @@
 <script src="/js/controllers/configure.controller.js"></script>
 <script src="/js/controllers/settings.controller.js"></script>
 <script src="/js/controllers/serverevents.controller.js"></script>
+<script src="/js/controllers/reconnaissance.controller.js"></script>
 <script src="/js/controllers/remoteInstaller.controller.js"></script>
 
 <script src="/js/resources/clients.resource.js"></script>
@@ -36,9 +39,10 @@
 <script src="/js/resources/manage.resource.js"></script>
 <script src="/js/resources/server.resource.js"></script>
 <script src="/js/resources/settings.resource.js"></script>
+<script src="/js/resources/reconnaissance.resource.js"></script>
 <script src="/js/resources/remoteInstaller.resource.js"></script>
-<script src="/js/directives/mindmap.directive.js"></script>
 
+<script src="/js/directives/mindmap.directive.js"></script>
 
 <body ng-controller="MainCtrl">
     <div id="wrapper">
