--- a/service/html/leftmenu.html
+++ b/service/html/leftmenu.html
@@ -19,6 +19,9 @@
             <a href="#" ui-sref='settings()'>Global settings</a>
         </li>
         <li>
+            <a href="#" ui-sref='reconnaissance()'>Reconnaissance</a>
+        </li>
+        <li>
             <a href="#" ui-sref='help()'>Help</a>
         </li>
     </ul>
