Improves reconnaisance look and feel

--- a/service/html/index.html
+++ b/service/html/index.html
@@ -11,6 +11,8 @@
     <link href="/css/bootstrap.min.css" rel="stylesheet">
     <!-- Custom CSS -->
     <link href="/css/simple-sidebar.css" rel="stylesheet">
+    <link href="/css/nv.d3.css" rel="stylesheet">
+
 </head>
 <script src="/js/libs/jquery.min.js"></script>
 <script src="/js/libs/ajaxmin.js"></script>
