--- a/service/html/reconnaissance.html
+++ b/service/html/reconnaissance.html
@@ -15,8 +15,10 @@
             id="splits"
             width="800"
             height="400"
+            showControls="true"
+            showLegend="true"
             showXAxis="true"
-            showYAxis="true">
+            showYAxis="false">
         <svg></svg>
     </nvd3-multi-bar-chart>	    
     <nvd3-multi-bar-chart
@@ -25,8 +27,10 @@
             id="consolidated"
             width="800"
             height="400"
+            showControls="true"
+            showLegend="true"
             showXAxis="true"
-            showYAxis="true">
+            showYAxis="false">
         <svg></svg>
     </nvd3-multi-bar-chart>
 	</div>
