Adds extra information to html.

--- a/service/html/help.html
+++ b/service/html/help.html
@@ -37,6 +37,14 @@
 	      	</div>
 	    </div>
 
+	    <div class="panel panel-default">
+	      <div class="panel-heading">Reconnaissance</div>
+	      	<div class="panel-body">Displays visually the results of the tests grouped by names or by clients, as an easy visualization of tests failing the most or setups most likely to fail. 
+	      	</div>
+	    </div>
+
+
+
 	  </div>
 	</div>
 
