--- a/service/html/reconnaissance.html
+++ b/service/html/reconnaissance.html
@@ -3,16 +3,18 @@
     <H5 style="text-align: center" ng-if="splitView === true">Grouped by client IP's</H5>
     <H5 style="text-align: center" ng-if="splitView === false"> Grouped by Test names </H5>
 	<div class="btn-group pull-right" role="group">
-		<button type="button" class="btn btn-secondary" ng-click="splitView!=null && splitView=true">
+		<button type="button" class="btn btn-secondary" ng-click="setSplitView(true)">
 			<span class="glyphicon glyphicon-sort-by-attributes"></span>
 		</button>
-		<button type="button" class="btn btn-secondary" ng-click="splitView!=null && splitView=false">
+		<button type="button" class="btn btn-secondary" ng-click="setSplitView(false)">
 			<span class="glyphicon glyphicon-compressed"></span>
 		</button>
 	</div>
 	<div class="container">
 		<H3 ng-if="splitView === null" style="text-align: center">No data yet!</H3>
 	    <nvd3-multi-bar-chart
+	    	tooltips="true"
+	    	tooltipcontent="toolTipContentFunction()"
 	    	ng-if="splitView === true"
             data="splitData"
             id="splits"
@@ -25,6 +27,8 @@
         <svg></svg>
     </nvd3-multi-bar-chart>	    
     <nvd3-multi-bar-chart
+            tooltips="true"
+			tooltipcontent="toolTipContentFunction()"
 	    	ng-if="splitView === false"
             data="consolidatedData"
             id="consolidated"
