Appends logs of commands in a test case instead of overwriting.

--- a/service/html/console.html
+++ b/service/html/console.html
@@ -7,7 +7,7 @@
             </div>
             <div class="modal-body">
                 <p ng-show="output.length == 0"> There is no output to display yet. </p>
-                <p ng-show="output.length != 0">{{output}}</p>
+                <p ng-show="output.length != 0"><pre>{{output}}</pre></p>
             </div>
         </div>
     </div>
